--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <title>POC OF PWA</title>
     <link rel="stylesheet" href="src/index.css" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="images/logo192.png"
+    <link rel="apple-touch-icon" href="images/logo192.png" />
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-messaging.js"></script>
+    <script src="src/index.js"></script>
   </head>
   <body
     style="
@@ -29,6 +32,5 @@
       </button>
       <button class="button">Notification (Server-Side)</button>
     </div>
-    <script src="src/index.js"></script>
   </body>
 </html>
