--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#009578" />
     <title>POC OF PWA</title>
-    <link rel="stylesheet" href="src/index.css" />
-    <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="images/logo192.png" />
+    <link rel="stylesheet" href="./src/index.css" />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="./images/logo192.png" />
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-messaging.js"></script>
-    <script src="src/index.js"></script>
+    <script src="./src/index.js"></script>
   </head>
   <body
     style="
