--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <button class="button" onclick="displayNotification()">
         Notification (Static)
       </button>
-      <button class="button">Notification (Server-Side)</button>
+      <!-- <button class="button">Notification (Server-Side)</button> -->
     </div>
   </body>
 </html>
